# TARP

./: README.md  pyproject.toml
example/: RPCclientExample.py  simpleServer.py
src/tarp/dev/: __init__.py  testclient.py  testserver.py
src/tarp/example/: clientExample.py  serverExample.py  simpleClient.py  simpleServer.py
tarp/: client.py  server.py
