[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tarp", "tarp.example"]

[project]
name = "tarp"
version = "0.0.1"
authors = [
  { name="Warwick RSE", email="resource.rse@warwick.ac.uk" },
]
description = "Tiny Asynchronous Remote Procedure calling. Code on two computers? Throw a tarp on it and done."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/WarwickRSE/TARP"
Issues = "https://github.com/WarwickRSE/TARP/issues"
